tests/compile-fail/invalid_format_description.stderr
error: expected string literal
 --> ../tests/compile-fail/invalid_format_description.rs:4:13
  |
4 |     let _ = format_description!();
  |             ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected component name
 --> ../tests/compile-fail/invalid_format_description.rs:5:33
  |
5 |     let _ = format_description!("[]");
  |                                 ^^^^

error: invalid component
 --> ../tests/compile-fail/invalid_format_description.rs:6:33
  |
6 |     let _ = format_description!("[foo]");
  |                                 ^^^^^^^

error: expected component name
 --> ../tests/compile-fail/invalid_format_description.rs:7:33
  |
7 |     let _ = format_description!("[");
  |                                 ^^^

error: modifier must be of the form `key:value`
 --> ../tests/compile-fail/invalid_format_description.rs:8:33
  |
8 |     let _ = format_description!("[hour foo]");
  |                                 ^^^^^^^^^^^^

error: unexpected token: x
 --> ../tests/compile-fail/invalid_format_description.rs:9:36
  |
9 |     let _ = format_description!("" x);
  |                                    ^

error: expected `v1` or `v2`
  --> ../tests/compile-fail/invalid_format_description.rs:10:33
   |
10 |     let _ = format_description!(x);
   |                                 ^

error: expected string literal
  --> ../tests/compile-fail/invalid_format_description.rs:11:33
   |
11 |     let _ = format_description!(0);
   |                                 ^

error: expected string literal
  --> ../tests/compile-fail/invalid_format_description.rs:12:33
   |
12 |     let _ = format_description!({});
   |                                 ^^

error: invalid component
  --> ../tests/compile-fail/invalid_format_description.rs:14:33
   |
14 |     let _ = format_description!("[ invalid ]");
   |                                 ^^^^^^^^^^^^^

error: expected component name
  --> ../tests/compile-fail/invalid_format_description.rs:15:33
   |
15 |     let _ = format_description!("[");
   |                                 ^^^

error: expected component name
  --> ../tests/compile-fail/invalid_format_description.rs:16:33
   |
16 |     let _ = format_description!("[ ");
   |                                 ^^^^

error: expected component name
  --> ../tests/compile-fail/invalid_format_description.rs:17:33
   |
17 |     let _ = format_description!("[]");
   |                                 ^^^^

error: invalid modifier key
  --> ../tests/compile-fail/invalid_format_description.rs:18:33
   |
18 |     let _ = format_description!("[day sign:mandatory]");
   |                                 ^^^^^^^^^^^^^^^^^^^^^^

error: expected modifier value
  --> ../tests/compile-fail/invalid_format_description.rs:19:33
   |
19 |     let _ = format_description!("[day sign:]");
   |                                 ^^^^^^^^^^^^^

error: expected modifier key
  --> ../tests/compile-fail/invalid_format_description.rs:20:33
   |
20 |     let _ = format_description!("[day :mandatory]");
   |                                 ^^^^^^^^^^^^^^^^^^

error: unclosed bracket
  --> ../tests/compile-fail/invalid_format_description.rs:21:33
   |
21 |     let _ = format_description!("[day sign:mandatory");
   |                                 ^^^^^^^^^^^^^^^^^^^^^

error: invalid modifier value
  --> ../tests/compile-fail/invalid_format_description.rs:22:33
   |
22 |     let _ = format_description!("[day padding:invalid]");
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^

error: invalid escape sequence
  --> ../tests/compile-fail/invalid_format_description.rs:24:37
   |
24 |     let _ = format_description!(v2, r"\a");
   |                                     ^^^^^

error: unexpected end of input
  --> ../tests/compile-fail/invalid_format_description.rs:25:37
   |
25 |     let _ = format_description!(v2, r"\");
   |                                     ^^^^

error: modifier must be of the form `key:value`
  --> ../tests/compile-fail/invalid_format_description.rs:27:37
   |
27 |     let _ = format_description!(v2, "[year [month]]");
   |                                     ^^^^^^^^^^^^^^^^

error: expected whitespace after `optional`
  --> ../tests/compile-fail/invalid_format_description.rs:28:37
   |
28 |     let _ = format_description!(v2, "[optional[]]");
   |                                     ^^^^^^^^^^^^^^

error: expected whitespace after `first`
  --> ../tests/compile-fail/invalid_format_description.rs:29:37
   |
29 |     let _ = format_description!(v2, "[first[]]");
   |                                     ^^^^^^^^^^^

error: unclosed bracket
  --> ../tests/compile-fail/invalid_format_description.rs:30:37
   |
30 |     let _ = format_description!(v2, "[optional []");
   |                                     ^^^^^^^^^^^^^^

error: unclosed bracket
  --> ../tests/compile-fail/invalid_format_description.rs:31:37
   |
31 |     let _ = format_description!(v2, "[first []");
   |                                     ^^^^^^^^^^^

error: unclosed bracket
  --> ../tests/compile-fail/invalid_format_description.rs:32:37
   |
32 |     let _ = format_description!(v2, "[optional [");
   |                                     ^^^^^^^^^^^^^

error: unclosed bracket
  --> ../tests/compile-fail/invalid_format_description.rs:33:37
   |
33 |     let _ = format_description!(v2, "[optional [[year");
   |                                     ^^^^^^^^^^^^^^^^^^

error: expected opening bracket
  --> ../tests/compile-fail/invalid_format_description.rs:34:37
   |
34 |     let _ = format_description!(v2, "[optional ");
   |                                     ^^^^^^^^^^^^
